@@ -20,7 +20,7 @@
  * IN THE SOFTWARE.
  ******************************************************************************/
 
-#include <fdm/models/fdm_Atmosphere.h>
+#include <fdm/models/fdm_AtmosphereUS76.h>
 
 #include <cmath>
 
@@ -35,7 +35,7 @@ using namespace fdm;
 ////////////////////////////////////////////////////////////////////////////////
 
 // US Standard Atmosphere 1976, Table 3, p.3
-const double Atmosphere::_m_i[] = {
+const double AtmosphereUS76::_m_i[] = {
     28.0134,
     31.9988,
     39.948,
@@ -49,7 +49,7 @@ const double Atmosphere::_m_i[] = {
 };
 
 // US Standard Atmosphere 1976, Table 3, p.3
-const double Atmosphere::_f_i[] = {
+const double AtmosphereUS76::_f_i[] = {
     0.78084,
     0.209476,
     0.00934,
@@ -63,7 +63,7 @@ const double Atmosphere::_f_i[] = {
 };
 
 // US Standard Atmosphere 1976, Table 4, p.3
-const double Atmosphere::_h_b[] = {
+const double AtmosphereUS76::_h_b[] = {
     11000.0,
     20000.0,
     32000.0,
@@ -74,7 +74,7 @@ const double Atmosphere::_h_b[] = {
 };
 
 // US Standard Atmosphere 1976, Table I, p.50-73
-const double Atmosphere::_p_b[] = {
+const double AtmosphereUS76::_p_b[] = {
     101325.0,
      22632.0,
       5474.8,
@@ -85,7 +85,7 @@ const double Atmosphere::_p_b[] = {
 };
 
 // US Standard Atmosphere 1976, Table I, p.50-73
-const double Atmosphere::_t_b[] = {
+const double AtmosphereUS76::_t_b[] = {
     288.15,
     216.65,
     216.65,
@@ -96,7 +96,7 @@ const double Atmosphere::_t_b[] = {
 };
 
 // US Standard Atmosphere 1976, Table 4, p.3
-const double Atmosphere::_l_b[] = {
+const double AtmosphereUS76::_l_b[] = {
     -6.5e-3,
     0.0,
     1.0e-3,
@@ -107,41 +107,41 @@ const double Atmosphere::_l_b[] = {
 };
 
 // [kg/kmol] mean molecular weight, US Standard Atmosphere 1976, p.9
-const double Atmosphere::_m =
-        ( Atmosphere::_m_i[ Atmosphere::N2  ] * Atmosphere::_f_i[ Atmosphere::N2  ]
-        + Atmosphere::_m_i[ Atmosphere::O2  ] * Atmosphere::_f_i[ Atmosphere::O2  ]
-        + Atmosphere::_m_i[ Atmosphere::Ar  ] * Atmosphere::_f_i[ Atmosphere::Ar  ]
-        + Atmosphere::_m_i[ Atmosphere::CO2 ] * Atmosphere::_f_i[ Atmosphere::CO2 ]
-        + Atmosphere::_m_i[ Atmosphere::Ne  ] * Atmosphere::_f_i[ Atmosphere::Ne  ]
-        + Atmosphere::_m_i[ Atmosphere::He  ] * Atmosphere::_f_i[ Atmosphere::He  ]
-        + Atmosphere::_m_i[ Atmosphere::Kr  ] * Atmosphere::_f_i[ Atmosphere::Kr  ]
-        + Atmosphere::_m_i[ Atmosphere::Xe  ] * Atmosphere::_f_i[ Atmosphere::Xe  ]
-        + Atmosphere::_m_i[ Atmosphere::CH4 ] * Atmosphere::_f_i[ Atmosphere::CH4 ]
-        + Atmosphere::_m_i[ Atmosphere::H2  ] * Atmosphere::_f_i[ Atmosphere::H2  ] )
+const double AtmosphereUS76::_m =
+        ( AtmosphereUS76::_m_i[ AtmosphereUS76::N2  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::N2  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::O2  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::O2  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::Ar  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::Ar  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::CO2 ] * AtmosphereUS76::_f_i[ AtmosphereUS76::CO2 ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::Ne  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::Ne  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::He  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::He  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::Kr  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::Kr  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::Xe  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::Xe  ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::CH4 ] * AtmosphereUS76::_f_i[ AtmosphereUS76::CH4 ]
+        + AtmosphereUS76::_m_i[ AtmosphereUS76::H2  ] * AtmosphereUS76::_f_i[ AtmosphereUS76::H2  ] )
         /
-        ( Atmosphere::_f_i[ Atmosphere::N2  ]
-        + Atmosphere::_f_i[ Atmosphere::O2  ]
-        + Atmosphere::_f_i[ Atmosphere::Ar  ]
-        + Atmosphere::_f_i[ Atmosphere::CO2 ]
-        + Atmosphere::_f_i[ Atmosphere::Ne  ]
-        + Atmosphere::_f_i[ Atmosphere::He  ]
-        + Atmosphere::_f_i[ Atmosphere::Kr  ]
-        + Atmosphere::_f_i[ Atmosphere::Xe  ]
-        + Atmosphere::_f_i[ Atmosphere::CH4 ]
-        + Atmosphere::_f_i[ Atmosphere::H2  ] );
+        ( AtmosphereUS76::_f_i[ AtmosphereUS76::N2  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::O2  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::Ar  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::CO2 ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::Ne  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::He  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::Kr  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::Xe  ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::CH4 ]
+        + AtmosphereUS76::_f_i[ AtmosphereUS76::H2  ] );
 
-const double Atmosphere::_r     = 8.31432e3;    // US Standard Atmosphere 1976, Table 2, p.2
-const double Atmosphere::_s     = 110.0;        // US Standard Atmosphere 1976, Table 2, p.2
-const double Atmosphere::_beta  = 1.458e-6;     // US Standard Atmosphere 1976, Table 2, p.2
-const double Atmosphere::_gamma = 1.4;          // US Standard Atmosphere 1976, Table 2, p.2
+const double AtmosphereUS76::_r     = 8.31432e3;    // US Standard Atmosphere 1976, Table 2, p.2
+const double AtmosphereUS76::_s     = 110.0;        // US Standard Atmosphere 1976, Table 2, p.2
+const double AtmosphereUS76::_beta  = 1.458e-6;     // US Standard Atmosphere 1976, Table 2, p.2
+const double AtmosphereUS76::_gamma = 1.4;          // US Standard Atmosphere 1976, Table 2, p.2
 
-const double Atmosphere::_std_sl_p = 101325.0;  // US Standard Atmosphere 1976, Table 2, p.2
-const double Atmosphere::_std_sl_t = 288.15;    // US Standard Atmosphere 1976, Table 2, p.2
-const double Atmosphere::_std_sl_rho = 1.225;
+const double AtmosphereUS76::_std_sl_p = 101325.0;  // US Standard Atmosphere 1976, Table 2, p.2
+const double AtmosphereUS76::_std_sl_t = 288.15;    // US Standard Atmosphere 1976, Table 2, p.2
+const double AtmosphereUS76::_std_sl_rho = 1.225;
 
 ////////////////////////////////////////////////////////////////////////////////
 
-double Atmosphere::getDensityAltitude( double pressure, double temperature,
+double AtmosphereUS76::getDensityAltitude( double pressure, double temperature,
                                        double altitude )
 {
     static double b = ( -_l_b[ 0 ]*_r  ) / ( WGS84::_g*_m + _l_b[ 0 ]*_r  );
@@ -159,7 +159,7 @@ double Atmosphere::getDensityAltitude( double pressure, double temperature,
 
 ////////////////////////////////////////////////////////////////////////////////
 
-Atmosphere::Atmosphere() :
+AtmosphereUS76::AtmosphereUS76() :
     _temperature_0 ( _std_sl_t ),
     _pressure_0    ( _std_sl_p )
 {
@@ -168,11 +168,11 @@ Atmosphere::Atmosphere() :
 
 ////////////////////////////////////////////////////////////////////////////////
 
-Atmosphere::~Atmosphere() {}
+AtmosphereUS76::~AtmosphereUS76() {}
 
 ////////////////////////////////////////////////////////////////////////////////
 
-void Atmosphere::update( double altitude )
+void AtmosphereUS76::update( double altitude )
 {
     double h_b = _h_b[ 5 ];
     double p_b = _p_b[ 6 ];
@@ -223,7 +223,10 @@ void Atmosphere::update( double altitude )
 
         if ( altitude < _h_b[ 0 ] )
         {
-            _pressure = ( _pressure / _std_sl_p ) * _pressure_0;
+            double c_h = ( _h_b[ 0 ] - altitude ) / _h_b[ 0 ];
+            double c_p = ( c_h * _pressure_0 + ( 1.0 - c_h ) * _std_sl_p ) / _std_sl_p;
+
+            _pressure = _pressure * c_p;
         }
     }
 
@@ -242,7 +245,7 @@ void Atmosphere::update( double altitude )
 
 ////////////////////////////////////////////////////////////////////////////////
 
-void Atmosphere::setPressureSL( double pressure_0 )
+void AtmosphereUS76::setPressureSL( double pressure_0 )
 {
     if ( pressure_0 > 90000.0 && pressure_0 < 110000.0 )
     {
@@ -256,7 +259,7 @@ void Atmosphere::setPressureSL( double pressure_0 )
 
 ////////////////////////////////////////////////////////////////////////////////
 
-void Atmosphere::setTemperatureSL( double temperature_0 )
+void AtmosphereUS76::setTemperatureSL( double temperature_0 )
 {
     if ( temperature_0 > 173.15 && temperature_0 < 373.15 )
     {
